Section title & Section

--- a/ms-auth/pom.xml
+++ b/ms-auth/pom.xml
@@ -72,7 +72,8 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>${jjwt}</version>
 		</dependency>
-<!--
+
+		<!-- TRACING
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-tracing-bridge-brave</artifactId>
@@ -80,8 +81,8 @@
 		<dependency>
 			<groupId>io.zipkin.reporter2</groupId>
 			<artifactId>zipkin-reporter-brave</artifactId>
-		</dependency>
--->
+		</dependency> -->
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
