--- a/ms-auth/src/main/resources/application.yaml
+++ b/ms-auth/src/main/resources/application.yaml
@@ -9,10 +9,6 @@ spring:
   application:
     name: ms-auth
 
-  # Zipkin configuration
-  #zipkin.base-url: http://localhost:9411/
-  #sleuth.sampler.probability: 1.0
-
   datasource:
     #url: jdbc:mysql://${MYSQL_HOSTNAME}:${MYSQL_PORT}/${MYSQL_DATABASE_NAME}?ssl-mode=REQUIRED
     url: jdbc:mariadb://${MYSQL_HOSTNAME}:${MYSQL_PORT}/${MYSQL_DATABASE_NAME}?ssl-mode=REQUIRED
@@ -33,17 +29,17 @@ spring:
       #dialect: org.hibernate.dialect.MySQLDialect
       dialect: org.hibernate.dialect.MariaDBDialect
       hibernate:
-        format_sql: true
-        use_sql_comments: true
-        highlight_sql: true
+        ['format_sql']: true
+        ['use_sql_comments']: true
+        ['highlight_sql'] : true
     show-sql: true
     open-in-view: false
 
 logging:
   level:
-    it.cgmconsulting.msauth: info
-    org.hibernate.orm.jdbc.bind: trace
-    org.springframework: info
+    ['it.cgmconsulting.msauth']: info
+    ['org.hibernate.orm.jdbc.bind']: trace
+    ['org.springframework']: info
 
 eureka:
   instance:
@@ -58,10 +54,21 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: info,health
+  #zipkin.tracing:
+    #connect-timeout: 1s
+    #endpoint: http://localhost:9411/api/v2/spans
+    #read-timeout: 10s
+  #tracing:
+    #sampling:
+      #probability: 1.0
   info:
     java.enabled: true
     os.enabled: true
+  #health:
+    #diskspace.enabled: true
+
+
 
 
 
