Get post Detail e sicurezza su chiamate interne

--- a/ms-post/src/main/resources/application.yaml
+++ b/ms-post/src/main/resources/application.yaml
@@ -63,3 +63,8 @@ management:
     java.enabled: true
     os.enabled: true
 
+# CUSTOM PROPERTIES
+application:
+  security:
+    internalToken: ${INTERNAL_TOKEN}
+
