--- a/ms-auth/src/main/resources/application.yaml
+++ b/ms-auth/src/main/resources/application.yaml
@@ -16,6 +16,9 @@ spring:
     password: ${MYSQL_PASSWORD}
     #driver-class-name: com.mysql.cj.jdbc.Driver
     driver-class-name: org.mariadb.jdbc.Driver
+    hikari:
+      pool-name: ms-auth-connection-pool
+      maximum-pool-size: 10
 
   jpa:
     hibernate:
@@ -29,17 +32,17 @@ spring:
       #dialect: org.hibernate.dialect.MySQLDialect
       dialect: org.hibernate.dialect.MariaDBDialect
       hibernate:
-        ['format_sql']: true
-        ['use_sql_comments']: true
-        ['highlight_sql'] : true
+        format_sql: true
+        use_sql_comments: true
+        highlight_sql : true
     show-sql: true
     open-in-view: false
 
 logging:
   level:
-    ['it.cgmconsulting.msauth']: info
-    ['org.hibernate.orm.jdbc.bind']: trace
-    ['org.springframework']: info
+    it.cgmconsulting.msauth: info
+    org.hibernate.orm.jdbc.bind: trace
+    org.springframework: info
 
 eureka:
   instance:
