--- a/ms-post/src/main/resources/application.yaml
+++ b/ms-post/src/main/resources/application.yaml
@@ -61,10 +61,49 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: info,health,endpoints
+  health:
+    circuit-breakers:
+      enabled: true
+  endpoint:
+    health:
+      show-details: always
   info:
     java.enabled: true
     os.enabled: true
+
+
+resilience4j.circuitbreaker:
+  instances:
+    a-tempo:
+      register-health-indicator: true
+      # Apertura del circuito se la request impiega più tempo di quanto stimato
+      sliding-window-type: TIME_BASED
+      # Numero di tentativi di request
+      sliding-window-size: 1
+      # Soglia - in percentuale - di fallimenti (se al 100%, basta che la chiamata al microservizio fallisca una volta sola)
+      slow-call-rate-threshold: 100
+      # Un'interazione è considerata lenta se impiega più di n secondi a rispondere
+      slow-call-duration-threshold: 2s
+      # Tempo per il quale permane lo stato HALF_OPEN
+      wait-duration-in-open-state: 60s
+      minimum-number-of-calls: 1
+      # Numero massimo di request permesse in stato HALF_OPEN
+      permitted-number-of-calls-in-half-open-state: 1
+      automatic-transition-from-open-to-half-open-enabled: true
+    a-tentativi:
+      register-health-indicator: true
+      # Apertura del circuito se la request fallisce n volte
+      sliding-window-type: COUNT_BASED
+      # Numero di tentativi di request
+      sliding-window-size: 1
+      # Soglia - in percentuale - di fallimenti (se al 100%, basta che la chiamata al microservizio fallisca una volta sola)
+      failure-rate-threshold: 100
+      wait-duration-in-open-state: 60s
+      permitted-number-of-calls-in-half-open-state: 1
+      automatic-transition-from-open-to-half-open-enabled: true
+
+
 
 # CUSTOM PROPERTIES
 application:
